--- a/spring-boot-ehcache/pom.xml
+++ b/spring-boot-ehcache/pom.xml
@@ -50,6 +50,10 @@
       <artifactId>spring-boot-starter-cache</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.cache</groupId>
+      <artifactId>cache-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.ehcache</groupId>
       <artifactId>ehcache</artifactId>
     </dependency>
